--- a/Chaabi/typingtutor/src/pages/home.css
+++ b/Chaabi/typingtutor/src/pages/home.css
@@ -1,92 +1,96 @@
-*{
- box-sizing: border-box;
- margin: 0;
- padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 
 }
 
-#container{
+#container {
   width: 90%;
   margin: 2em auto;
 }
-h1{
+
+h1 {
   font-family: cursive;
 }
 
 
 
-#source_container{
+#source_container {
   width: 60%;
   margin: 5em auto;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   background: #27374D;
   padding: 1rem;
-  gap:.4rem;
+  gap: .4rem;
   color: #fff;
   border-radius: 5px;
-max-width: 100%;
+  max-width: 100%;
 }
 
-#source_container h4{
+#source_container h4 {
   text-decoration: underline;
 }
 
-#source_container>div,.generator{
+#source_container>div,
+.generator {
   display: flex;
   flex-direction: column;
-  gap:1rem;
+  gap: 1rem;
 }
 
-#source_container>div>div{
+#source_container>div>div {
   display: flex;
-align-items: center;
-justify-content: center;
-  gap:0.5rem;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
-input[type='submit']{
-  padding:.2rem;
+input[type='submit'] {
+  padding: .2rem;
 }
 
-.generator>div{
+.generator>div {
   display: flex;
   flex-direction: column;
 }
 
-.generator>div>p{
+.generator>div>p {
   margin: .2rem;
 }
 
-.generator>div>input{
-  width:25%;
+.generator>div>input {
+  width: 25%;
   padding: .5em;
   border-radius: 5px;
 }
 
 
-#text_container{
+#text_container {
   width: 60%;
   margin: 5em auto .8em;
   display: grid;
-  grid-template-rows: repeat(2,1fr);
-  gap:2rem;
-   
+  grid-template-rows: repeat(2, 1fr);
+  gap: 2rem;
+
 }
 
-#text_container>textarea:nth-child(1){
+#text_container>textarea:nth-child(1) {
   background: #8696FE;
   color: #fff;
   border: none;
 }
-.text-editor{
+
+.text-editor {
   display: block;
   height: 5rem;
   text-align: center;
-  padding: 1.6rem 4rem; 
-  font-size:xx-large;
+  padding: 1.6rem 4rem;
+  font-size: xx-large;
   border-radius: 6px;
   line-height: 1.5;
+  background-color: #D2E9E9;
 }
 
 
@@ -94,65 +98,61 @@ input[type='submit']{
   display: none;
 }
 
-.accuracy-wpm{
+.accuracy-wpm {
   width: 50%;
   margin: auto;
-display: flex;
-justify-content: space-around;
-}
-
-
-@media only screen and (max-width: 450px) {
-  body,.text-editor {
-    font-size: small;
-  }
-  .generator>div>p{
-    margin: 1px;
-  }
-  
-  .generator>div>input{
-    width:50%;
-    padding: .5em;
-    border-radius: 5px;
-  }
-}
-
-.aside-left{
-position: fixed;
- width:20%;
- left:0;
- 
-}
-aside>img{
-  width: 100%;
-}
-
-.aside-right{
-  position: fixed;
-  right:0;
-  width: 20%;
-
-}
-.accuracy-wpm{
+  display: flex;
+  justify-content: space-around;
   font-weight: 600;
 }
 
 
 
+.wrong-key {
+  background-color: #f24753;
+}
 
 
+
+
+
+
+
+
+/* media queries for responsiveness */
+
+@media only screen and (max-width: 450px) {
+
+  body,
+  .text-editor {
+    font-size: small;
+  }
+
+  .generator>div>p {
+    margin: 1px;
+  }
+
+  .generator>div>input {
+    width: 50%;
+    padding: .5em;
+    border-radius: 5px;
+  }
+}
 
 
 @media only screen and (min-width:450px) and (max-width: 600px) {
-  body,.text-editor {
+
+  body,
+  .text-editor {
     font-size: large;
   }
-  .generator>div>p{
+
+  .generator>div>p {
     margin: 2px;
   }
-  
-  .generator>div>input{
-    width:40%;
+
+  .generator>div>input {
+    width: 40%;
     padding: .5em;
     border-radius: 5px;
   }
